# aws_s3_storage_analysis_cli

./: .gitignore  Dockerfile  Makefile  README.md  cli.py  cli_docker.py  dodo.py  pyproject.toml
store/: __init__.py  aws.py  cli.py  core.py
tests/: test_store.py
tests/integration/: test_main.py
