[tool.poetry]
name = "store"
version = "0.1.0"
description = "A CLI that shows summary statistics for your AWS S3 Buckets"
authors = ["James Hounshell <james.hounshell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.14.58"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
doit = "^0.33.1"
pytest-watch = "^4.2.0"
boto3-stubs = {extras = ["s3"], version = "^1.14.60"}
mypy = "^0.782"
pyinstaller = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
